# workers-rs-util

./: .gitignore  Cargo.toml  README.md  fnox.toml  mise.toml  rust-toolchain.toml
.github/workflows/: mise-upgrade.yml  mise.yml
crates/: README.md
crates/cf_email_worker/: .gitignore  Cargo.toml  wrangler.toml
crates/cf_email_worker/src/: lib.rs
crates/cloudflare-shell/: CLAUDE.md  Cargo.toml  README.md
crates/cloudflare-shell-rpc/: DECISIONS.md  README.md  pitchfork.toml
crates/cloudflare-shell-rpc/bench/: README.md  REPORT.local.md  REPORT.remote.md  matrix.nu  report.nu  results.nuon  run.nu  sizes.nu  sizes.nuon
crates/cloudflare-shell-rpc/client/: Cargo.toml  README.md
crates/cloudflare-shell-rpc/client/src/: lib.rs  service.rs  sys.rs
crates/cloudflare-shell-rpc/demo-js/: README.md  index.js  wrangler.toml
crates/cloudflare-shell-rpc/demo-rust/: Cargo.toml  README.md  wrangler.toml
crates/cloudflare-shell-rpc/demo-rust/src/: lib.rs
crates/cloudflare-shell-rpc/server/: Cargo.toml  README.md  build.rs  shim.js  wrangler.toml
crates/cloudflare-shell-rpc/server/src/: do_obj.rs  http.rs  lib.rs  rpc.rs  wire.rs
crates/cloudflare-shell-rpc/smoke/: README.md  run.nu
crates/cloudflare-shell-rpc/types/: Cargo.toml  README.md
crates/cloudflare-shell-rpc/types/src/: lib.rs
crates/cloudflare-shell-workspace/: CLAUDE.md  Cargo.toml  PORT_STATUS.md  README.md
crates/cloudflare-shell-workspace/src/: conformance_runner.rs  filesystem.rs  lib.rs  schema.rs
crates/cloudflare-shell/src/: conformance.rs  error.rs  interface.rs  lib.rs  path_utils.rs
crates/nu_plugin_cedar/: Cargo.toml  README.md
crates/nu_plugin_cedar/src/: main.rs
crates/nu_plugin_email/: Cargo.toml
crates/nu_plugin_email/src/: lib.rs  main.rs  outcome.rs  send.rs
crates/nu_plugin_push/: Cargo.toml  README.md
crates/nu_plugin_push/examples/: gen_test_sub.rs  gen_vapid.rs
crates/nu_plugin_push/src/: lib.rs  main.rs  send.rs  subscription.rs  vapid.rs
