[workspace]
resolver = "2"
members = [
    "crates/cloudflare-shell",
    "crates/cloudflare-shell-workspace",
    "crates/cloudflare-shell-rpc/types",
    "crates/cloudflare-shell-rpc/server",
    "crates/cloudflare-shell-rpc/client",
    "crates/cloudflare-shell-rpc/demo-rust",
    "crates/nu_plugin_cedar",
    "crates/nu_plugin_push",
    "crates/nu_plugin_email",
    "crates/cf_email_worker",
]
# Host-buildable crates only. The wasm32-unknown-unknown Workers
# (cloudflare-shell-workspace, cloudflare-shell-rpc/{server,demo-rust},
# cf_email_worker) are excluded so a bare `cargo build`/`test`/`check` on the
# host doesn't try to compile them. Build those via their -p/worker-build tasks
# (cf:fs:build, email:worker:check, etc.) against the wasm target.
default-members = [
    "crates/cloudflare-shell",
    "crates/cloudflare-shell-rpc/types",
    "crates/cloudflare-shell-rpc/client",
    "crates/nu_plugin_cedar",
    "crates/nu_plugin_push",
    "crates/nu_plugin_email",
]

# Shared deps for the cloudflare-shell family + workers crates. Members use
# `<dep>.workspace = true` instead of repeating versions.
[workspace.dependencies]
worker = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
base64 = "0.22"
console_error_panic_hook = "0.1"
futures-util = "0.3"

[profile.release]
lto = true
codegen-units = 1
