[package]
name = "cloudflare-shell-workspace"
version = "0.1.0"
edition = "2021"
rust-version = "1.88.0"
description = "DurableObject SQLite + R2 implementation of cloudflare-shell's FileSystem trait. Schema-compatible with @cloudflare/shell -- data written from either side is readable by the other."
license = "MIT"
repository = "https://github.com/joeblew999/http-nu"
homepage = "https://github.com/joeblew999/http-nu/tree/joeblew999/crates/cloudflare-shell-workspace"
documentation = "https://docs.rs/cloudflare-shell-workspace"
readme = "README.md"
keywords = ["cloudflare", "workers", "durable-objects", "r2", "filesystem"]
categories = ["wasm", "filesystem"]

# docs.rs only renders the wasm-target API; this crate doesn't compile on
# the default x86_64-unknown-linux-gnu target because `worker = "0.8"` is
# wasm-only at the binding level.
[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]
all-features = true

[dependencies]
cloudflare-shell = { version = "0.1.0", path = "../cloudflare-shell", features = ["workers"] }
worker.workspace = true
serde.workspace = true
base64.workspace = true
futures-util.workspace = true
