[package]
name = "cloudflare-shell"
version = "0.1.0"
edition = "2021"
rust-version = "1.88.0"
description = "Rust port of @cloudflare/shell's FileSystem abstraction: trait, types, error enum, and a generic conformance test suite. Backend-agnostic; pair with cloudflare-shell-workspace (or a custom impl) to get a working filesystem."
license = "MIT"
repository = "https://github.com/joeblew999/http-nu"
homepage = "https://github.com/joeblew999/http-nu/tree/joeblew999/crates/cloudflare-shell"
documentation = "https://docs.rs/cloudflare-shell"
readme = "README.md"
keywords = ["cloudflare", "workers", "filesystem", "wasm"]
categories = ["wasm", "filesystem"]

[features]
default = []
# Enables `From<worker::Error>` / `From<FsError> for worker::Error` on
# wasm32, for impls that bridge worker-rs error boundaries.
workers = ["dep:worker"]

[dependencies]
worker = { workspace = true, optional = true }
